--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -1,3 +1,15 @@
+<!--
 <h1>
-  Olá {{ nome }}!
+  App Root
 </h1>
+
+<app-hello-world></app-hello-world>
+
+<app-bem-vindo></app-bem-vindo>
+
+<h1>
+  Teste bootstrap
+</h1>
+-->
+<app-jumbotron></app-jumbotron>
+   
