--- a/primeiro-projeto/src/app/pessoa/pessoa.component.html
+++ b/primeiro-projeto/src/app/pessoa/pessoa.component.html
@@ -1,7 +1,20 @@
-<h1>
-  Meu nome é {{ nome }}!
-</h1>
+<div class="container">
+  <div class="alert alert-success" role="alert">
+    Registro salvo com sucesso:
+    <strong>
+      {{ nome }}
+    </strong>
+  </div>
 
-<h2>
-  Minha idade é {{ 20 + getIdade()}}.
-</h2>
+  <div class="form-group">
+    <label>
+      Nome
+    </label>
+
+    <input type="text" class="form-control">
+  </div>
+
+  <button type="button" class="btn btn-primary" on-click="salvar()">
+    Salvar
+  </button>
+</div>
