--- a/primeiro-projeto/src/app/pessoa/pessoa.component.html
+++ b/primeiro-projeto/src/app/pessoa/pessoa.component.html
@@ -14,7 +14,7 @@
     <input type="text" class="form-control">
   </div>
 
-  <button type="button" class="btn btn-primary" on-click="salvar()">
+  <button type="button" class="btn btn-primary" (click)="salvar()">
     Salvar
   </button>
 </div>
