--- a/primeiro-projeto/src/app/pessoa/pessoa.component.html
+++ b/primeiro-projeto/src/app/pessoa/pessoa.component.html
@@ -11,10 +11,18 @@
       Nome
     </label>
 
-    <input type="text" class="form-control" (input)="onAlterarNome($event)">
+    <input 
+      type="text" 
+      class="form-control" 
+      (input)="onAlterarNome($event)"
+      value="{{ nome }}"
+    >
   </div>
 
-  <button type="button" class="btn btn-primary" (click)="salvar()">
+  <button 
+      type="button" 
+      class="btn btn-primary" 
+      (click)="salvar()">
     Salvar
   </button>
 </div>
