--- a/primeiro-projeto/src/app/pessoa/pessoa.component.html
+++ b/primeiro-projeto/src/app/pessoa/pessoa.component.html
@@ -12,18 +12,16 @@
     </label>
 
     <input 
-      #inputNome
       type="text" 
       class="form-control" 
-      (input)="onAlterarNome($event)" 
-      [value]="nome"
+      [(ngModel)]="nome"
     >
   </div>
 
   <button 
       type="button" 
       class="btn btn-primary" 
-      (click)="salvar(inputNome)"
+      (click)="salvar()"
       [disabled]="nome.length === 0">
     Salvar
   </button>
