--- a/primeiro-projeto/src/app/pessoa/pessoa.component.html
+++ b/primeiro-projeto/src/app/pessoa/pessoa.component.html
@@ -17,6 +17,7 @@
       type="text" 
       class="form-control" 
       [(ngModel)]="nome"
+      (focus)="isExibirAlerta = false"
     >
   </div>
 
