--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -13,7 +13,7 @@
 
 <app-jumbotron></app-jumbotron>
 -->
-
-<app-pessoa></app-pessoa>
-
+<div class="container">
+  <app-funcionario></app-funcionario>
+</div>
    
