--- a/primeiro-projeto/src/app/funcionario/funcionario.component.html
+++ b/primeiro-projeto/src/app/funcionario/funcionario.component.html
@@ -1,48 +1,18 @@
-<div>
-  <div *ngIf="isExibirAlerta" 
-        class="alert alert-success" 
-        role="alert">
-    Registro salvo com sucesso:
-    <strong>
-      {{ nome }}
-    </strong>
-  </div>
+<app-cadastro-funcionario (afterSalvarFuncionario)="onAfterSalvar($event)"></app-cadastro-funcionario> 
 
-  <div class="form-group">
-    <label>
-      Nome
-    </label>
-
-    <input 
-      type="text" 
-      class="form-control" 
-      [(ngModel)]="nome"
-      (focus)="isExibirAlerta = false"
-    >
-  </div>
-
-  <button 
-      type="button" 
-      class="btn btn-primary" 
-      (click)="onSalvar()"
-      [disabled]="nome.length === 0">
-    Salvar
-  </button>
-
-  <button 
-      type="button" 
-      style="color: white"
-      class="btn btn-warning" 
-      (click)="onLimpar()">
-    Limpar
-  </button>
-</div> 
+<h2 class="caption">
+  Lista de funcionários
+</h2>
 
 <div class="row" 
      style="margin-top: 20px;">
   <div 
       class="col-2"
-      *ngFor="let funcionarioTO of listaFuncionario">
-        <app-funcionario-card [funcionario]="funcionarioTO"></app-funcionario-card>
+      *ngFor="let funcionario of listaFuncionario">
+        <app-card 
+          [valor]="funcionario.id"
+          [descricao]="funcionario.nome"
+        >
+        </app-card>
   </div>
 </div>
