--- a/demo-innovation-ui/src/app/app.component.html
+++ b/demo-innovation-ui/src/app/app.component.html
@@ -1,8 +1,4 @@
-
-<h1>
-  Teste InputText
-</h1>
-
-<button type="submit" class="btn btn-primary">Submit</button>
-
-<in-input-text></in-input-text>
+<in-button
+  label="Teste"
+  color="warn">
+</in-button>
