--- a/demo-innovation-ui/src/app/app.component.html
+++ b/demo-innovation-ui/src/app/app.component.html
@@ -1,4 +1,14 @@
 <in-button
   label="Teste"
-  color="warn">
+  color="warn"
+>
 </in-button>
+
+<br>
+<br>
+
+<in-input-text
+  label="Código"
+  type="number"
+>
+</in-input-text>
