--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/input-text/input-text.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/input-text/input-text.component.html
@@ -1,1 +1,11 @@
-<button type="submit" class="btn btn-primary">Submit</button>
+<div class="col-md-3">
+    <div class="form-group">
+        <label for="exampleInputEmail1">{{ label }}</label>
+        <input
+            id="exampleInputEmail1"
+            type="{{type}}"
+            class="form-control"
+            placeholder="{{ placeholder }}"
+        >
+    </div>
+</div>
