--- a/demo-innovation-ui/src/app/app.component.html
+++ b/demo-innovation-ui/src/app/app.component.html
@@ -1,14 +1,12 @@
-<in-button
-  label="Teste"
-  color="warn"
->
-</in-button>
+<in-crud
+  header="Cadastro de categoria">
+  <div body>
+    <div class="row">
+      body
+    </div>
+  </div>
 
-<br>
-<br>
-
-<in-input-text
-  label="Código"
-  type="number"
->
-</in-input-text>
+  <div footer>
+      footer
+  </div>
+</in-crud>
