--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/input-text/input-text.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/input-text/input-text.component.html
@@ -1,11 +1,14 @@
 <div class="col-md-3">
-    <div class="form-group">
-        <label for="exampleInputEmail1">{{ label }}</label>
-        <input
-            id="exampleInputEmail1"
-            type="{{type}}"
-            class="form-control"
-            placeholder="{{ placeholder }}"
-        >
-    </div>
+  <div class="form-group">
+      <label for="exampleInputEmail1">
+        {{ label }}
+      </label>
+
+      <input
+          id="exampleInputEmail1"
+          type="text"
+          class="form-control"
+          placeholder="{{ placeholder }}"
+      >
+  </div>
 </div>
