--- a/financeiro-ui/src/app/index/index.component.html
+++ b/financeiro-ui/src/app/index/index.component.html
@@ -1,22 +1,60 @@
 <mat-sidenav-container>
-  <mat-toolbar
-    color="primary"
-  >
-    <button
-      mat-icon-button
-      (click)="sidenav.toggle()"
-    >
-      <mat-icon>
-        menu
-      </mat-icon>
-    </button>
-    <span>Financeiro-UI</span>
-  </mat-toolbar>
-
   <mat-sidenav
     #sidenav
-    mode="over"
-    opened="false"
-  >
+    role="navigation">
+    <p>
+      Menu
+    </p>
+
+    <div class="row">
+    <mat-list>
+        <mat-list-item>
+          Categories
+          <button
+            mat-button
+            mat-icon-button
+            (click)="showSubmenu = !showSubmenu">
+            <mat-icon
+              class="menu-button"
+              [ngClass]="{'rotated' : showSubmenu}"
+            >
+              expand_more
+            </mat-icon>
+          </button>
+        </mat-list-item>
+        <div
+          class="submenu"
+          [ngClass]="{'expanded' : showSubmenu}">
+          <mat-list-item>Cadastro</mat-list-item>
+          <mat-list-item>Pesquisa</mat-list-item>
+        </div>
+      </mat-list>
+    </div>
   </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar
+      color="primary">
+      <div>
+        <button
+          mat-icon-button
+          (click)="sidenav.toggle()">
+          <mat-icon>
+            menu
+          </mat-icon>
+        </button>
+      </div>
+
+      <div>
+        Logo
+      </div>
+
+      <div>
+        Financeiro-UI
+      </div>
+
+      <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+        Logout
+      </div>
+    </mat-toolbar>
+  </mat-sidenav-content>
 </mat-sidenav-container>
