--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
@@ -1,3 +1,15 @@
-<p>
-  index works!
-</p>
+<mat-toolbar
+  color="primary">
+  <span>Demo-Financeiro-UI</span>
+
+  <mat-sidenav-container>
+    <mat-sidenav>
+      Start
+    </mat-sidenav>
+    
+    <mat-sidenav-content>
+      Main
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</mat-toolbar>
+
