--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
@@ -1,15 +1,9 @@
-<mat-toolbar
-  color="primary">
-  <span>Demo-Financeiro-UI</span>
+<in-header
+  [title]="title"
+  [logo]="logo"
+>
+</in-header>
 
-  <mat-sidenav-container>
-    <mat-sidenav>
-      Start
-    </mat-sidenav>
-    
-    <mat-sidenav-content>
-      Main
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-</mat-toolbar>
+<mat-sidenav-container>
 
+</mat-sidenav-container>
