--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/header/header.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/header/header.component.html
@@ -3,6 +3,7 @@
 >
   <button
     mat-icon-button
+    (click)="sidenav.toggle()"
   >
     <mat-icon>
       menu
@@ -10,8 +11,8 @@
   </button>
 
   <span>
-      LOGO
-    </span>
+    LOGO
+  </span>
 
   <span>
     Financeiro-UI
