--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
@@ -3,11 +3,11 @@
   [ngStyle]="{'padding-left': (depth * 12) + 'px'}"
   (click)="onmenuSelected(menu)"
   [ngClass]="{'active': menu.route ? router.isActive(menu.route, true): false, 'expanded': expanded}"
-  class="menu-list-menu"
+  class="in-menu-list-menu"
 >
 
   <mat-icon
-    class="routeIcon"
+    class="in-route-icon"
   >
     {{menu.icon}}
   </mat-icon>
