--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
@@ -13,9 +13,12 @@
 
   {{menu.title}}
 
-  <span fxFlex *ngIf="menu.children && menu.children.length">
+  <span
+    *ngIf="menu.children && menu.children.length"
+    fxFlex
+  >
     <span fxFlex></span>
-    <mat-icon >
+    <mat-icon>
       expand_more
     </mat-icon>
   </span>
