--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.scss
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.scss
@@ -6,24 +6,23 @@
   outline: none;
   width: 100%;
 
-  .in-mat-list-item.active {
-    background-color: mat-color($app-primary, 50);
+  .mat-list-item.active {
+    background-color: mat-color($in-primary, 50);
   }
-
   &:hover,
   &:focus {
-    >.in-mat-list-item:not(.expanded) {
-      background-color: mat-color($app-primary, 100) !important;
+    >.mat-list-item:not(.expanded) {
+      background-color: mat-color($in-primary, 100) !important;
     }
   }
 }
 
-.in-mat-list-item {
+.mat-list-item {
   padding: 8px 0;
   display: flex;
   width: auto;
 
-  .in-route-icon {
+  .routeIcon {
     margin-right: 40px;
   }
 }
