--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/header/header.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/header/header.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar
   color="primary"
+  class="in-fixed-topnav"
 >
   <button
     mat-icon-button
-    (click)="sidenav.toggle()"
+    (click)="navService.openNav()"
   >
     <mat-icon>
       menu
