--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.html
@@ -1,33 +1,35 @@
-<a 
-  mat-list-item 
-  [ngStyle]="{'padding-left': (depth * 12) + 'px'}" 
-  (click)="onItemSelected(menu)"
+<a
+  mat-list-item
   [ngClass]="{'active': menu.route ? router.isActive(menu.route, true): false, 'expanded': expanded}"
-  class="menu-list-item"
+  [ngStyle]="{'padding-left': (depth * 12) + 'px'}"
+  (click)="onMenuSelected(menu)"
+  class="in-menu-list-item"
 >
-  <mat-icon 
+  <mat-icon
     class="in-route-icon"
   >
-    {{menu.icon}}
+    {{ menu.icon }}
   </mat-icon>
-  
-  {{menu.title}}
-  
-  <span 
+
+  {{ menu.title }}
+
+  <span
     *ngIf="menu.children && menu.children.length"
     fxFlex
   >
     <span fxFlex></span>
-    <mat-icon [@indicatorRotate]="expanded ? 'expanded': 'collapsed'">
+    <mat-icon
+      [@indicatorRotate]="expanded ? 'expanded': 'collapsed'"
+    >
       expand_more
     </mat-icon>
   </span>
 </a>
-
 <div *ngIf="expanded">
-  <in-menu-list-item 
-    *ngFor="let child of menu.children" 
-    [menu]="child" 
-    [depth]="depth+1">
-  </in-menu-list-item>
-</div>
+    <in-menu-list-item
+      *ngFor="let child of menu.children"
+      [menu]="child"
+      [depth]="depth+1"
+    >
+    </in-menu-list-item>
+  </div>
