--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.scss
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.scss
@@ -1,53 +1,13 @@
-@import '../../css/breakpoints';
-@import '../../css/theme';
-
 .in-mat-sidenav-container {
-  background-color: white !important;
   height: 100vh;
 }
 
 .in-mat-sidenav {
-  width: 360px;
+  width: 300px;
 }
 
-.sidenav-toolbar {
-  height: 64px;
-  background-color: mat-color($in-primary);
-  display: flex;
-  flex-direction: row;
-
-  @media (max-width: 600px) {
-    height: 56px;
+.in-menu-list-item mat-list-item expanded {
+  .mat-list-item-content{
+    flex: 1 1 100%
   }
-}
-
-.mat-nav-list {
-  padding-top: 0;
-}
-
-@include breakpoint-max(600px) {
-  .fixed-topnav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 100% !important;
-  }
-
-  .mat-drawer-container,
-  .mat-drawer {
-    padding-top: 56px;
-  }
-}
-
-.menu-list-item.mat-list-item {
-  .mat-list-item-content {
-    flex: 1 1 100%;
-  }
-}
-
-.version-info {
-  font-size: 8pt;
-  float: right;
-  padding: 8px;
 }
