--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.scss
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/menu-list-item/menu-list-item.component.scss
@@ -1,12 +1,5 @@
 @import '../../../css/theme';
 
-
-.menu-list-item.mat-list-item {
-  .mat-list-item-content {
-    flex: 1 1 100%;
-  }
-}
-
 :host {
   display: flex;
   flex-direction: column;
@@ -29,7 +22,7 @@
   display: flex;
   width: auto;
 
-  .routeIcon {
+  .in-route-icon {
     margin-right: 40px;
   }
 }
