--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index/index.component.html
@@ -32,36 +32,8 @@
       title="title"
     >
     </in-header>
+
+    <in-index-module>
+    </in-index-module>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!--
-<mat-sidenav-container
-  class="in-mat-sidenav-container">
-  <mat-sidenav
-    #sidenav
-    class="in-mat-sidenav"
-    mode="over" opened="false">
-    <mat-toolbar
-      color="primary"
-    >
-      <span>
-        Menu
-      </span>
-    </mat-toolbar>
-
-    <in-menu-list-item
-      *ngFor="let menu of listMenu"
-      [menu]="menu"
-    >
-    </in-menu-list-item>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-
-
-    <content>
-    </content>
-  </mat-sidenav-content>
-</mat-sidenav-container>-->
-
