--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
@@ -1,1 +1,16 @@
-{{ title }}
+<form novalidate #form="ngForm">
+  <div *ngIf="formCrudLoaded">
+    Loading...
+  </div>
+</form>
+
+<ng-template #formCrudLoaded>
+  <div class="row">
+    <div class="col-lg-12">
+      {{ title }}
+    </div>
+  </div>
+
+  <ng-content select="[body]">
+  </ng-content>
+</ng-template>
