--- a/demo-innovation-ui/src/app/views/categories/cadastro-categories/cadastro-categories.component.html
+++ b/demo-innovation-ui/src/app/views/categories/cadastro-categories/cadastro-categories.component.html
@@ -1,14 +1,4 @@
 <in-crud
-  title="Teste"
+  title="Cadastro de categories"
 >
-  <div body>
-    <div class="row">
-      <div class="col-lg-3">
-        <in-input
-          label="Código"
-        >
-        </in-input>
-      </div>
-    </div>
-  </div>
 </in-crud>
