--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
@@ -1,16 +1,14 @@
-<form novalidate #form="ngForm">
-  <div *ngIf="formCrudLoaded">
-    Loading...
-  </div>
-</form>
-
-<ng-template #formCrudLoaded>
-  <div class="row">
+<form
+  novalidate
+  #form="ngForm"
+>
+  <div>
     <div class="col-lg-12">
+      <i class="fa fa-wpforms"></i>
       {{ title }}
     </div>
   </div>
 
   <ng-content select="[body]">
   </ng-content>
-</ng-template>
+</form>
