--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index-module/index-module.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index-module/index-module.component.html
@@ -3,3 +3,16 @@
       <router-outlet></router-outlet>
   </mat-card>
 </div>
+
+<nav class="in-nav-breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a routerLink="/">
+        Home
+      </a>
+    </li>
+    <li class="breadcrumb-item active">
+      Pesquisa de categories
+    </li>
+  </ol>
+</nav>
