--- a/demo-innovation-ui/src/app/views/categories/cadastro-categories/cadastro-categories.component.html
+++ b/demo-innovation-ui/src/app/views/categories/cadastro-categories/cadastro-categories.component.html
@@ -1,10 +1,12 @@
-<in-crud title="Cadastro de categories">
-  <div body>
-    <div class="row">
-      <div class="col-lg-3">
-        <in-input-text label="Id">
-        </in-input-text>
-      </div>
+<in-crud 
+  title="Cadastro de categories"
+>
+    <div body>
+        <div class="row">
+            <in-input-text 
+              label="Id"
+            >
+            </in-input-text>
+        </div>
     </div>
-  </div>
 </in-crud>
