--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
@@ -1,14 +1,24 @@
 <form
-  novalidate
-  #form="ngForm"
+    novalidate
+    #form="ngForm"
 >
-  <div>
-    <div class="col-lg-12">
-      <i class="fa fa-wpforms"></i>
-      {{ title }}
+    <div class="row">
+        <div class="col-lg-12">
+            <h4>
+                <i 
+                  class="fa fa-wpforms"
+                  style="margin-right: 5px;"
+                >
+                </i>
+                <span>
+                  {{ title }}
+                </span>
+            </h4>
+        </div>
     </div>
-  </div>
 
-  <ng-content select="[body]">
-  </ng-content>
+    <ng-content 
+      select="[body]"
+    >
+    </ng-content>
 </form>
