--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index-module/index-module.component.scss
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/index-module/index-module.component.scss
@@ -10,3 +10,9 @@
         margin-right: 8px;
     }
 }
+
+.in-nav-breadcrumb {
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
