--- a/demo-innovation-ui/src/app/views/categories/pesquisa-categories/pesquisa-categories.component.html
+++ b/demo-innovation-ui/src/app/views/categories/pesquisa-categories/pesquisa-categories.component.html
@@ -1,24 +1,4 @@
-<div 
-  class="row in-pesquisa"
+<in-search
+  title="Pesquisa de categories"
 >
-    <div class="col-lg-12">
-        <h4>
-            <i 
-              class="fa fa-wpforms"
-              style="margin-right: 5px;"
-            >
-            </i>
-            <span>
-              Pesquisa de categorias
-            </span>
-        </h4>
-    </div> 
-</div>
-<div class="row">
-  <p-dataTable 
-    [value]="listaCategories"
-  >
-    <p-column header="Id" field="id"></p-column>
-    <p-column header="Descrição" field="descricao"></p-column>
-  </p-dataTable>
-</div>
+</in-search>
