--- a/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
+++ b/demo-innovation-ui/projects/innovation-ui/src/lib/module/components/crud/crud.component.html
@@ -17,8 +17,7 @@
         </div>
     </div>
 
-    <ng-content 
-      select="[body]"
-    >
-    </ng-content>
+    <div class="in-crud-body">
+        <ng-content select="[body]"></ng-content>
+    </div>
 </form>
