--- a/demo-innovation-ui/src/app/views/categories/pesquisa-categories/pesquisa-categories.component.html
+++ b/demo-innovation-ui/src/app/views/categories/pesquisa-categories/pesquisa-categories.component.html
@@ -1,4 +1,12 @@
 <in-search
   title="Pesquisa de categories"
 >
+
+  <div body>
+    <div class="row">
+      <in-data-table
+        [provider]="listaCategories">
+      </in-data-table>
+    </div>
+  </div>
 </in-search>
