--- a/primeiro-projeto/src/styles.scss
+++ b/primeiro-projeto/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    height: 100%; 
+}
+
+body { 
+    margin: 0;     
+}
+
+.mat-card {
+    margin: 15px;
+    min-height: 80%;
+}
