--- a/primeiro-projeto/src/app/views/directiva/card-ng-for/card-ng-for.component.html
+++ b/primeiro-projeto/src/app/views/directiva/card-ng-for/card-ng-for.component.html
@@ -43,7 +43,9 @@
           class="col-2"
           *ngFor="let colaborador of listaColaborador">
         <app-card
-          [colaborador]="colaborador">
+          [propriedadeImage]="caminhoImg"
+          [propriedadeValor]="nome"
+          [card]="colaborador">
         </app-card>
       </div>
     </div>
