--- a/primeiro-projeto/src/app/arquitetura/card/card.component.html
+++ b/primeiro-projeto/src/app/arquitetura/card/card.component.html
@@ -1,9 +1,9 @@
 <div class="card">
   <img 
       class="card-img-top" 
-      src="{{colaborador.caminhoImg}}">
+      src="{{card.caminhoImg}}">
 
   <div class="card-body">
-    <strong>{{colaborador.nome}}</strong>
+    <strong>{{card.nome}}</strong>
   </div>
 </div>
