--- a/primeiro-projeto/src/app/arquitetura/table/table.component.html
+++ b/primeiro-projeto/src/app/arquitetura/table/table.component.html
@@ -4,12 +4,33 @@
         <th *ngFor="let col of columns">
             {{col.header}}
         </th>
+
+        <th style="width: 120px"></th>
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-entidade let-columns="columns">
     <tr>
         <td *ngFor="let col of columns">
                 {{entidade[col.field]}}
+        </td>
+
+        <td style="text-align:center;">
+            <button
+              pButton
+              type="button"
+              icon="pi pi-pencil"
+              class="ui-button-info"
+              (click)="onRowEditInit(rowData)">
+            </button>
+
+            <button
+              pButton
+              type="button"
+              icon="pi pi-times"
+              class="ui-button-danger"
+              style="margin-left: .5em;"
+              (click)="onRowEditCancel(rowData, ri)">
+            </button>
         </td>
     </tr>
   </ng-template>
