--- a/primeiro-projeto/src/app/arquitetura/table/table.component.scss
+++ b/primeiro-projeto/src/app/arquitetura/table/table.component.scss
@@ -3,5 +3,10 @@ td.ng-star-inserted {
 }
 
 th.ng-star-inserted {
-  padding: 0.20em 0.857em !important;
+  padding: 0.20em 0.800em !important;
 }
+
+.ui-button {
+  font-size: 12px !important;
+}
+
