--- a/primeiro-projeto/src/app/arquitetura/table/table.component.html
+++ b/primeiro-projeto/src/app/arquitetura/table/table.component.html
@@ -19,8 +19,7 @@
               pButton
               type="button"
               icon="pi pi-pencil"
-              class="ui-button-info"
-              (click)="onRowEditInit(rowData)">
+              class="ui-button-info">
             </button>
 
             <button
@@ -28,8 +27,7 @@
               type="button"
               icon="pi pi-times"
               class="ui-button-danger"
-              style="margin-left: .5em;"
-              (click)="onRowEditCancel(rowData, ri)">
+              style="margin-left: .5em;">
             </button>
         </td>
     </tr>
