--- a/primeiro-projeto/src/app/arquitetura/cadastro/cadastro.component.html
+++ b/primeiro-projeto/src/app/arquitetura/cadastro/cadastro.component.html
@@ -10,32 +10,33 @@
       <div class="row">
         {{ categoria | json }}
       </div>
+      <div class="row">
+        {{crudForm.valid }}
+      </div>
+      <div class="row">
+        {{ crudForm.invalid }}
+      </div>
+
+      <div class="row">
+        <div
+            *ngIf="crudForm.touched && crudForm.invalid"
+            class="alert alert-danger"
+            role="alert">
+          Preencha todo os campos obrigatorio!
+        </div>
+      </div>
 
       <div class="form-row">
-        <div class="form-group col-md-3">
-          <label for="idCodigo">
-            <strong>Código</strong>
-          </label>
-          <input
-            type="text"
-            class="form-control form-control-sm"
-            id="idCodigo"
-            name="codigo"
-            [(ngModel)]="categoria.id"
-            disabled>
+        <div class="col-md-3">
+          <app-input
+            label="Código">
+          </app-input>
         </div>
 
-        <div class="form-group col-md-6">
-          <label for="idDescricao">
-              <strong>Descrição</strong>
-          </label>
-          <input
-            type="password"
-            class="form-control form-control-sm"
-            id="idDescricao"
-            name="descricao"
-            [(ngModel)]="categoria.descricao"
-            required>
+        <div class="col-md-6">
+          <app-input
+              label="Descrição">
+          </app-input>
         </div>
       </div>
 
@@ -44,7 +45,8 @@
           <button
               mat-raised-button
               color="primary"
-              (click)="onSalvar()">
+              (click)="onSalvar()"
+              [disabled]="!crudForm.valid || isSalvando">
             Salvar
           </button>
 
@@ -60,7 +62,8 @@
               mat-raised-button
               color="warn"
               style="margin-left: 5px;"
-              (click)="onExcluir()">
+              (click)="onExcluir()"
+              [disabled]="!categoria?.id">
             Excluir
           </button>
         </div>
