--- a/primeiro-projeto/src/app/core/cadastro/cadastro.component.html
+++ b/primeiro-projeto/src/app/core/cadastro/cadastro.component.html
@@ -7,38 +7,8 @@
   </mat-card-header>
   <mat-card-content>
     <form #crudForm="ngForm">
-      <div class="row">
-        {{ categoria | json }}
-      </div>
-      <div class="row">
-        {{crudForm.valid }}
-      </div>
-      <div class="row">
-        {{ crudForm.invalid }}
-      </div>
-
-      <div class="row">
-        <div
-            *ngIf="crudForm.touched && crudForm.invalid"
-            class="alert alert-danger"
-            role="alert">
-          Preencha todo os campos obrigatorio!
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="col-md-3">
-          <app-input
-            label="Código">
-          </app-input>
-        </div>
-
-        <div class="col-md-6">
-          <app-input
-              label="Descrição">
-          </app-input>
-        </div>
-      </div>
+      <ng-content select="[body]">
+      </ng-content>
 
       <div class="row">
         <div class="col-md-12">
