--- a/primeiro-projeto/src/app/core/input/input.component.scss
+++ b/primeiro-projeto/src/app/core/input/input.component.scss
@@ -15,3 +15,8 @@
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.input-label-required {
+  color: #FF0000;
+  font-size: 11px !important;
+}
