--- a/primeiro-projeto/src/app/views/categoria/pesquisa-categoria/pesquisa-categoria.component.html
+++ b/primeiro-projeto/src/app/views/categoria/pesquisa-categoria/pesquisa-categoria.component.html
@@ -1,5 +1,3 @@
-<app-pesquisa
-  titulo="Pesquisa de categoria"
-  [cols]="cols"
-  [list]="listaCategoria">
-</app-pesquisa>
+<p>
+    Pesquisa de categoria!
+</p>
