--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -1,27 +1,3 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation">
-    <p>Menu principal</p>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <mat-toolbar 
-        class="mat-elevation-z6" 
-        color="primary">
-      <div>
-        <button 
-            mat-icon-button
-            (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-
-      <div>
-        <span>
-          LOGO
-        </span>
-      </div>
-    </mat-toolbar>
-    
+<app-index>
     <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+</app-index>
