--- a/primeiro-projeto/src/app/views/categoria/cadastro-categoria/cadastro-categoria.component.html
+++ b/primeiro-projeto/src/app/views/categoria/cadastro-categoria/cadastro-categoria.component.html
@@ -1,5 +1,4 @@
 <app-cadastro
-    [service]="service"
     titulo="Cadastro de categoria">
   <div class="body">
     <div class="row">
@@ -11,7 +10,7 @@
         <app-input-text
           label="Código"
           [disabled]="true"
-          [(ngModel)]="service.id">
+          [(ngModel)]="id">
         </app-input-text>
       </div>
 
@@ -20,7 +19,7 @@
           label="Descrição"
           [required]="true"
           [maxlength]="60"
-          [(ngModel)]="service.descricao">
+          [(ngModel)]="descricao">
         </app-input-text>
       </div>
     </div>
