--- a/primeiro-projeto/src/app/base/core/components/index/index.component.html
+++ b/primeiro-projeto/src/app/base/core/components/index/index.component.html
@@ -21,5 +21,7 @@
         </span>
       </div>
     </mat-toolbar>
+
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
